# WMJ

./: README.md
Final/: README.md
Final/Detect/src/: Project.cpp  Project.hpp  main.cpp  test.cpp
Final/src/: Project.cpp  Project.hpp  info.txt  main.cpp  test.cpp
Week2/: CMakeLists.txt
Week2/src/: Project.cpp  Project.hpp  test.cpp
Week3/: CMakeLists.txt
Week3/src/: main.cpp
