cmake_minimum_required(VERSION 3.0) 

project(Project LANGUAGES CXX)  

add_executable(${PROJECT_NAME} ./src/test.cpp ./src/Project.hpp ../src/Project.cpp) 

target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14) 
target_include_directories(${PROJECT_NAME} PRIVATE include)  

# OpenCV setup 
find_package(OpenCV REQUIRED) 
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
